# aws-assume-role

./: Cargo.toml  LICENSE  README.md
src/: main.rs
